fix: [ReviewInstitutions] Adjust spacing between status-label and Institution name

--- a/src/pages/AuthenticatedLanding/Landing.less
+++ b/src/pages/AuthenticatedLanding/Landing.less
@@ -21,9 +21,12 @@
   .institution-list {
     margin-top: 2em;
 
-    .cf-icon-svg,
-    .status-label {
+    .cf-icon-svg {
       margin-right: 0.5em;
+    }
+
+    .status-label {
+      margin-right: 0.7em;
     }
   }
 
